--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "braid.server",
-  "version": "0.2.1",
+  "version": "0.2.3",
   "description": "A federated server for interconnecting braid-compatible clients",
   "main": "braid-server.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "mongodb": "^2.0.33",
     "node-uuid": "^1.4.3",
     "nodejs-websocket": "^1.2.1",
+    "path": "^0.11.14",
     "scribe-js": "^2.0.4"
   },
   "devDependencies": {
