--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "braid.server",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "A federated server for interconnecting braid-compatible clients",
   "main": "braid-server.js",
   "scripts": {
@@ -17,7 +17,8 @@
     "node-uuid": "^1.4.3",
     "nodejs-websocket": "^1.2.1",
     "path": "^0.11.14",
-    "scribe-js": "^2.0.4"
+    "scribe-js": "^2.0.4",
+    "ws": "^0.7.2"
   },
   "devDependencies": {
     "mocha": "^2.2.5"
