--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^1.2.1",
     "bcrypt": "^0.8.3",
     "command-line-args": "^0.5.9",
+    "dns": "^0.2.2",
     "express": "^4.12.4",
     "fs": "0.0.2",
     "mongodb": "^2.0.33",
