braid.server > braid-server

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "braid.server",
-  "version": "0.2.9",
+  "name": "braid-server",
+  "version": "0.2.10",
   "description": "A federated server for interconnecting braid-compatible clients",
   "main": "braid-server.js",
   "scripts": {
     "test": "mocha"
   },
+  "bin": "./braid-server" 
   "author": "HivePoint, Inc.",
   "license": "MIT",
   "dependencies": {
