Code complete on bot tile stuff, not tested

--- a/config.json
+++ b/config.json
@@ -23,6 +23,9 @@
 		"hello" : {
 		}
 	},
+	"bot" : {
+		"inventoryRequestDelay": 15000
+	},
 	"debug" : {
 		"messageSwitch": {
 			"logMessages" : false
