FileServer working for basic GET and PUT

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "dns": "^0.2.2",
     "express": "^4.12.4",
     "fs": "0.0.2",
+    "gridfs-stream": "^1.1.1",
     "lru-cache": "^2.6.4",
     "mongodb": "^2.0.33",
     "node-uuid": "^1.4.3",
     "path": "^0.11.14",
+    "request": "^2.58.0",
     "scribe-js": "^2.0.4",
     "ws": "^0.7.2"
   },
