--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "braid-server",
-  "version": "0.3.11",
+  "version": "0.3.12",
   "description": "A federated server for interconnecting collaboration apps",
   "bin": {
     "braid-server": "./braid-server.js"
@@ -20,6 +20,8 @@
     "express": "^4.12.4",
     "fs": "0.0.2",
     "gridfs-stream": "^1.1.1",
+    "http": "0.0.0",
+    "https": "^1.0.0",
     "lru-cache": "^2.6.4",
     "mongodb": "^2.0.33",
     "node-uuid": "^1.4.3",
