--- a/config.json
+++ b/config.json
@@ -10,14 +10,14 @@
 	},
 	"client" : {
 		"enabled" : true,
-		"ssl" : false,
+		"ssl" : true,
 		"port" : 25555,
 		"hello" : {
 		}
 	},
 	"federation" : {
 		"enabled" : true,
-		"ssl" : false,
+		"ssl" : true,
 		"port" : 25557,
 		"idleInSeconds" : 300,
 		"hello" : {
@@ -25,7 +25,7 @@
 	},
 	"fileServer" : {
 		"enabled" : true,
-		"ssl" : false,
+		"ssl" : true,
 		"port" : 25559
 	},
 	"bot" : {
